opentreemap/treemap/css/sass/partials/pages/_modeling.scss
/* ... */
#plan-list {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: 999;
    overflow: hidden;
    -webkit-overflow-scrolling: touch;
    transition: .5s ease transform;

    &.slideUp {
        transform: translate(0, -100%)
    }

    .close {
        position: absolute;
        right: -80px;
        margin-top: -30px;
        opacity: .6;
        background: $main-text-color;
        text-shadow: none;
        color: #fff;
        transition: .2s ease-in-out opacity;
        &:hover {
            opacity: 1;
        }
        @media #{$screen-xs} {
            right: 20px;
            margin-top: -50px;
        }
    }

    .plans-backdrop {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        bottom: 0;
        background: #fff;
        opacity: .75;
        z-index: 1;
    }

    .plans-content {
        display: block;
        width: 80%;
        min-width: 340px;
        margin: 100px auto 30px;
        background: #fff;
        border-radius: 10px;
        box-shadow: 0 1px 5px rgba(0, 0, 0, .25);
        position: relative;
        z-index: 1;
    }

    .plans-header {
        display: block;
        padding: 30px 30px 15px;
        border-bottom: 1px solid darken($light-gray-color, 10%);

        h3 {
            display: inline-block;
        }
    }

    #plan-filters {
        float: right;
        display: inline-block;
        text-align: right;

        .filter-toggle {
            display: inline-block;
            padding: 15px 0 26px;
            margin-top: -10px;
            font-weight: 400;
            transition: .2s ease-in-out color;
            &:first-child {
                margin-right: 15px;
            }
            &:hover {
                color: $button-primary;
            }
        }

        .active {
            color: $button-primary;
            box-shadow: inset 0 -4px 0 0;
        }
    }

    .plans-body {
        padding: 30px 30px 15px;   
        max-height: 55vh;
        overflow: auto;
    }

    table {

        thead {
            font-size: 1.3rem;
            color: lighten($subtext-color, 15%);
            tr th {
                border-bottom: none;
                padding-left: 15px;
            }
            a {
                color: lighten($subtext-color, 15%);
            }
            .ascending, .descending {
                color: $main-text-color;
            }
        }

        tbody {
            tr td {
                padding: 15px;
            }

            a {
                text-decoration: underline;
            }
        }

        p {
            font-size: 1.3rem;
            margin: 5px 0;
        }
    }

    .pagination {
        .active a,
        .active a:hover,
        .active a:focus {
            background-color: $button-primary;
            border-color: $button-primary;
        }
    }
}

